@@ -35,6 +35,7 @@ alt="Red Hat Logo"></a></p>
   <li><a href="internals.html">white paper on libxslt internals</a></li>
   <li><a href="extensions.html">documentation on writing extensions for
     libxslt</a></li>
+  <li><a href="xsltproc.html">xsltproc user manual</a></li>
   <li><a href="http://xmlsoft.org/">the libxml documentation</a></li>
 </ul>
 
